--- a/anathema/package.json
+++ b/anathema/package.json
@@ -1,6 +1,7 @@
 {
     "name": "KADOKAWA/RPGMV",
     "main": "www/index.html",
+	"chromium-args": "--ignore-gpu-blacklist",
     "js-flags": "--expose-gc",
     "window": {
         "title": "",
